<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageViewDetail"
        android:layout_width="183dp"
        android:layout_height="187dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/titulo"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintEnd_toStartOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewDetail"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
     />


    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="183dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/ano_de_lan_amento"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:text="@string/inp_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/atualizarOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00BCD4"
        android:onClick="atualizarFotoOnClick"
        android:text="@string/atualizar"
        app:layout_constraintEnd_toEndOf="@+id/textViewDate"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/textViewDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <Button
        android:id="@+id/deletarFotoOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:hint="@string/delete"
        android:onClick="deletarFotoOnClick"
        android:text="@string/deletar"
        app:layout_constraintEnd_toEndOf="@+id/atualizarOnClick"
        app:layout_constraintStart_toStartOf="@+id/atualizarOnClick"
        app:layout_constraintTop_toBottomOf="@+id/atualizarOnClick" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="258dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetail" />


</androidx.constraintlayout.widget.ConstraintLayout>