<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#FFFFFF"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

                <ImageView
                    android:layout_margin="15dp"
                    android:id="@+id/imageView"
                    android:layout_height="120dp"
                    android:layout_width="150dp"
                    android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textName"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:layout_margin="10dp"
                        android:text="@string/movie_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                     />

                    <TextView
                        android:id="@+id/textdate"
                        android:layout_margin="10dp"
                        android:text="@string/movie_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>